# rust-js-test

./: README.md  package.json  test.db
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
